crates/daemonizable-e2e-tests/tests/macro_ui/fail_on_struct.rs
//! Attaching the attribute to anything that isn't an impl block must produce
//! the macro's own diagnostic, not a confusing parser error.

#![allow(dead_code)]

#[daemonizable::main]
struct NotAnImpl;

fn main() {}
